--- a/KaffeevollautomatDisplay/Views/SpracheView.xaml
+++ b/KaffeevollautomatDisplay/Views/SpracheView.xaml
@@ -19,8 +19,8 @@
                 <TextBlock Text="English" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center"/>
             </Button>
 
-            <Button Width="100" Height="40" Click="Zurueck_Click" Margin="0,30,0,0">
-                <TextBlock Text="Zurück" HorizontalAlignment="Center"/>
+            <Button x:Name="ZurueckButton" Width="100" Height="40" Click="Zurueck_Click" Margin="0,30,0,0">
+                <TextBlock x:Name="ZurueckTextBlock" Text="Zurück" HorizontalAlignment="Center"/>
             </Button>
         </StackPanel>
     </Grid>
