--- a/KaffeevollautomatDisplay/Views/FuellstandView.xaml
+++ b/KaffeevollautomatDisplay/Views/FuellstandView.xaml
@@ -1,33 +1,40 @@
 ﻿<UserControl x:Class="KaffeevollautomatDisplay.Views.FuellstandView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Height="400" Width="800">
+             Background="White">
+
     <Grid Background="White" Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
+        <!-- Steuerbuttons oben -->
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,10,10">
-            <Button Content="Wasser auffüllen" Margin="5" Click="WasserAuffuellen_Click"/>
-            <Button Content="Bohnen auffüllen" Margin="5" Click="BohnenAuffuellen_Click"/>
-            <Button Content="Zurück" Margin="5" Click="ZurueckButton_Click"/>
+            <Button x:Name="WasserBtn" Content="Wasser auffüllen" Margin="5" Click="WasserAuffuellen_Click"/>
+            <Button x:Name="BohnenBtn" Content="Bohnen auffüllen" Margin="5" Click="BohnenAuffuellen_Click"/>
+            <Button x:Name="ZurueckBtn" Content="Zurück" Margin="5" Click="ZurueckButton_Click"/>
         </StackPanel>
 
+        <!-- Balkenanzeige -->
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <StackPanel Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <TextBlock Text="Wasserstand" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
-                <TextBlock x:Name="WasserstandText" FontSize="16"/>
+            <!-- Wasser -->
+            <StackPanel Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20">
+                <TextBlock x:Name="WasserTitel" Text="Wasserstand" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
+                <ProgressBar x:Name="WasserProgress" Width="250" Height="25" />
+                <TextBlock x:Name="WasserstandText" FontSize="16" Margin="0,10,0,0" HorizontalAlignment="Center"/>
             </StackPanel>
 
-            <StackPanel Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <TextBlock Text="Bohnenstand" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
-                <TextBlock x:Name="BohnenstandText" FontSize="16"/>
+            <!-- Bohnen -->
+            <StackPanel Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20">
+                <TextBlock x:Name="BohnenTitel" Text="Bohnenstand" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
+                <ProgressBar x:Name="BohnenProgress" Width="250" Height="25" />
+                <TextBlock x:Name="BohnenstandText" FontSize="16" Margin="0,10,0,0" HorizontalAlignment="Center"/>
             </StackPanel>
         </Grid>
     </Grid>
